@@ -7,7 +7,7 @@ public class AbstractFaultIDComparator implements
 
 	@Override
 	public int compare(AbstractFaultSection o1, AbstractFaultSection o2) {
-		Integer id1 = new Integer(o1.getId());
+		Integer id1 = Integer.valueOf(o1.getId());
 		return id1.compareTo(o2.getId());
 	}
 
